--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ package:
 plugins:
   - serverless-bundle
   - serverless-offline
-  # - serverless-dotenv-plugin
+  - serverless-dotenv-plugin
 
 provider:
   name: aws
@@ -29,3 +29,6 @@ functions:
           path: sendEmail
           method: post
           cors: true
+
+resources:
+  - ${file(resources/api-gateway-errors.yml)}
